--- a/实现导航页/实现换肤功能.md
+++ b/实现导航页/实现换肤功能.md
@@ -1,1 +1,5 @@
+### 功能描述   
+点击换肤按钮，实现页面背景的切换
+
+![image](https://user-images.githubusercontent.com/71962217/130625373-1a158ca5-4a11-4b8a-a686-4adcaae22076.png)
 
