--- a/实现导航页/实现换肤功能.md
+++ b/实现导航页/实现换肤功能.md
@@ -4,4 +4,17 @@
 ![image](https://user-images.githubusercontent.com/71962217/130626470-6ebfafcc-33f9-4dae-9342-9dd096f219cd.png)
 ![image](https://user-images.githubusercontent.com/71962217/130626617-8a155df2-bf68-498c-a14b-70d59a0d9353.png)
 
-
+1. 引入组件，并绑定点击事件 <br>``` <change @click.native="changeSkin"></change>```
+2. 具体方法<br>
+   定义变量isActive，为true执行换肤，false回到初始皮肤
+   ```  changeSkin() {
+      if (this.isActive) {
+        this.$refs.home.style.backgroundImage =
+          "linear-gradient(#6d78b7, #2ebf91)"
+        this.isActive = false
+      } else {
+        this.$refs.home.style.backgroundImage = "none"
+        this.isActive = true
+      }
+    },
+    ```
