--- a/JS/图片遍历问题.md
+++ b/JS/图片遍历问题.md
@@ -1,1 +1,12 @@
+#### 关于图片遍历的一个小误区
+遍历图片时不能直接遍历路径   
+错误写法：   
+```
+   <img :src="item.srcs" class="item" style="width:30px;display:inline;" />           
+```
+![IMG_7185(20210825-111916)](https://user-images.githubusercontent.com/71962217/130732756-26c13c3d-1206-4183-975e-d4efeb188393.PNG)
+正确写法：  
+![image](https://user-images.githubusercontent.com/71962217/130732833-d98697d8-c0a4-4cc0-b8a6-50741eab9b97.png)
+
+![9C4BWC5% (6YK{L}$0C%TM6](https://user-images.githubusercontent.com/71962217/130732794-ac83123a-97ad-4564-bbe4-3402f5b2d544.png)
 
