--- a/JS/图片遍历问题.md
+++ b/JS/图片遍历问题.md
@@ -4,10 +4,10 @@
 ```
    <img :src="item.srcs" class="item" style="width:30px;display:inline;" />           
 ```
-![IMG_7185(20210825-111916)](https://user-images.githubusercontent.com/71962217/130732756-26c13c3d-1206-4183-975e-d4efeb188393.PNG)   
-正确写法：   
-在对象中添加sname属性，表示图片的名字
-![image](https://user-images.githubusercontent.com/71962217/130732833-d98697d8-c0a4-4cc0-b8a6-50741eab9b97.png)   
-通过统一的前缀路径与图片的名称进行遍历
+![IMG_7185(20210825-111916)](https://user-images.githubusercontent.com/71962217/130732756-26c13c3d-1206-4183-975e-d4efeb188393.PNG)   <br>
+正确写法：   <br>
+在对象中添加sname属性，表示图片的名字<br>
+![image](https://user-images.githubusercontent.com/71962217/130732833-d98697d8-c0a4-4cc0-b8a6-50741eab9b97.png)   <br>
+通过统一的前缀路径与图片的名称进行遍历<br>
 ![9C4BWC5% (6YK{L}$0C%TM6](https://user-images.githubusercontent.com/71962217/130732794-ac83123a-97ad-4564-bbe4-3402f5b2d544.png)
 
