--- a/实现导航页/实现一键回到顶部（节流防抖）.md
+++ b/实现导航页/实现一键回到顶部（节流防抖）.md
@@ -6,6 +6,7 @@
   mounted() {
     window.addEventListener("scroll", this.debounce(this.handleScroll,300), true)
   },
+  //debounce的返回值是一个函数
 ```
 3. 实现handleScroll方法，保存滚动值，判断图标是否出现<br>
 ```
@@ -26,50 +27,74 @@ backClick() {
 
 5. #### 节流（throttle）与防抖（debounce）
    ##### 防抖
-   在事件被触发n秒后再执行回调，如果在这n秒内又被触发，则重新计时。<br>
-   频繁操作时不会发送请求，只有在指定间隔内不操作时才会执行函数<br>
+   在事件被触发n秒后再执行回调，如果在这n秒内又被触发，则重新计时。（只要最后一次事件的操作）<br>
+   频繁操作时(delay时间内)不会发送请求，只有在指定间隔内不操作时才会执行函数<br>
 
    1. 普通方法<br>
      
    ```
-   var timer; // 维护同一个timer
-      function debounce(fn, delay) {
-        clearTimeout(timer);
-        timer = setTimeout(function() {
+   var timer; 
+   function debounce(fn, delay) {  
+        clearTimeout(timer);//之前已经被触发，清掉
+        timer = setTimeout(function() {//重新计时 执行业务代码
           fn();
         }, delay);
       }
    ```
    2. 闭包<br>
-      闭包使我们可以在内层函数中可以访问到其外层函数的作用域
+      闭包使我们可以在内层函数中可以访问到其外层函数的作用域<br>
+      这里需要注意的是，<b>如果被setTimeout推迟执行的回调函数是某个对象的方法，那么该方法中的this关键字将指向全局环境，而不是定义时所在的那个对象。</b>   这种情况下可以使用call()来调用所有者对象作为参数的方法
    ```
     //借助闭包
      debounce(fn,delay){
-      let timer = null;
+      let timer = null;//因为闭包 所以变量不会被销毁
       return function () {
         if(timer){
           clearTimeout(timer)
         }
-        timer = setTimeout(fn,delay);        
+        <!-- timer = setTimeout(fn,delay);  //简约写法：直接传入函数名，this指向的 就是fn的地址  -->
+        timer = setTimeout(()=>{
+            fn.call(this);
+        },delay)
       }
     }
    ```
    ##### 节流
-   规定一个单位时间，在这个单位时间内，只能有一次触发事件的回调函数执行，如果在同一个单位时间内某事件被触发多次，只有一次能生效。
+   规定一个单位时间，在这个单位时间内，只能有一次触发事件的回调函数执行，如果在同一个单位时间内某事件被触发多次，只有一次能生效。<br>
+   1. 定时器方式
    ```
-     function throttle(fn, delay) {
-        let timer;
-        return function () {
-            if (timer) {
-                //如果timer不为空，说明还在时间间隔内，不触发事件
-                return;
+   function throttle(fn,delay){
+       let flag = true;
+       return function(){
+           if(flag){
+               setTimeout(() =>{
+                   fn.call(this);
+                   <!-- 每执行一次，设为true 将执行频率控制在每delay毫秒执行一次 -->
+                   flag = true;
+               },delay)
+           }
+           flag = false;
+     }
+   }
+   ```
+    2. 时间戳方式
+    ```
+    function throttle(func, delay) {　　　　　　　　
+        // 首先获取使用节流机制时的时间
+            var prev = Date.now();
+            return function () {　　　　　　　　　　
+                // 再获取调用时的时间
+                var now = Date.now();
+                var context = this;
+                var args = arguments;　　　　　　　　　　
+                // 若两个时间差超过了设置的时间，调用函数
+                if (now - prev >= delay) {
+                    func.apply(context, arguments)
+                }
+                prev = Date.now;
             }
-            let context = this;
-            let args = arguments;
-            timer = setTimeout(() => {
-                fn.apply(context, args);
-                timer = null; //执行一次后要将timer置为null，这里就是节流与防抖的区别
-            }, delay);
-        };
-    }
-   ```
+        }
+    ```
+##### 节流与防抖的区别
+   防抖：只执行最后一次<br>
+   节流：控制执行次数<br>
