--- a/axios/01.md
+++ b/axios/01.md
@@ -2,3 +2,95 @@
 ```
 npm install axios
 ```
+```
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+```
+vue中
+```
+npm install --save axios vue-axios
+
+main.js中
+
+import Vue from 'vue'
+import axios from 'axios'
+import VueAxios from 'vue-axios'
+
+Vue.use(VueAxios, axios)
+```
+
+#### 区别一般的http请求与ajax请求
+1. ajax请求是一种特别的http 请求
+2. 对服务器端来说，没有任何区别，**区别在浏览器端**
+3. 浏览器端发请求:**只有XHR或fetch 发出的才是ajax请求**，其它所有的都是
+非ajax请求
+4. 浏览器端接收到响应
+   1. **一般请求**:**浏览器一般会直接显示响应体数据，也就是我们常说的刷新/跳转页面**
+   2. **ajax请求:浏览器不会对界面进行任何更新操作，只是调用监视的回调函数并传入响应相关数据**
+
+### XHR对象
+ajax通过原生的**XMLHttpRequest**对象发出HTTP请求，得到服务器返回的数据后，再进行处理   
+
+ajax的几个步骤：   
+1. 创建ajax对象
+2. 发出http请求
+3. 接受服务器传回的数据
+4. 更新网页数据
+
+   #### open("请求方式","url",false)   
+   false 同步   true为异步  
+    
+   #### send()   
+   如果是GET方法，send()方法无参数，或参数为null；如果是POST方法，send()方法的参数为要发送的数据
+
+
+
+### axios特点
+1. 基于promise的异步ajax请求库
+2. 浏览器端/node端都可以使用
+3. 支持请求/响应拦截器
+4. 支持请求取消
+5. 请求/响应数据转换
+6. 批量发送多个请求
+
+### axiox常用语法
+[api](http://www.axios-js.com/docs/)
+****
+
+axios(config)                          通用，最本质的发送任意请求
+
+axios(url[, config])                   指定url发get请求吧
+
+axios.request(config)                  等同于axios(config) 
+
+axios.get(url[, config])               发送get请求
+
+axios.delete(url[, config])         发送delete请求
+
+axios.post(url[, data[, config]])
+
+axios.put(url[, data[, config]])
+
+axios.head(url[, config])       
+
+axios.options(url[, config])
+
+axios.patch(url[, data[, config]])
+****
+
+axios.default.xxxx 请求的默认全局配置
+
+**axios.interceptors.request.use() 添加请求拦截器**
+
+**axios.interceptors.request.use() 添加响应拦截器**
+
+****
+**axios.create([config])** :官方文档为创建一个新的axios实例   也有人解释为创建一个新的axios   它不具备以下功能：
+****
+**axios.Cancel()**  :用于创建取消请求的错误对象
+**axios.cancelToken()** :用于创建取消请求的token对象
+**axios.isCancel()** :是否是一个取消请求的错误
+**axios.all(promises)** :用于批量执行多个异步请求
+
+
+##### 
+[axios使用]()
