--- a/axios/01.md
+++ b/axios/01.md
@@ -93,4 +93,4 @@ axios.default.xxxx 请求的默认全局配置
 
 
 ##### 
-[axios使用]()
+[axios使用](https://github.com/zyy782/yuanyuan.github.io/blob/main/axios/01.html)
