--- a/Navigation project/实现一键回到顶部（节流防抖）.md
+++ b/Navigation project/实现一键回到顶部（节流防抖）.md
@@ -1,14 +1,15 @@
 ### 一键回到顶部功能的实现
 1. 引入组件并绑定点击事件，v-show决定组件是否显示<br>
    ```<back-top @click.native="backClick" v-show="isShowBackTop"></back-top>```
-2. 监听滚动事件<br>
+2. 监听滚动事件<br>     
+   监听滚动时，滚动事件会频繁的被触发，我们并不需要如此高频率的反馈，毕竟浏览器的性能是有限的。因此可以在监听滚动时使用节流操作来避免高频率的事件触发。关于防抖与节流在下面会具体介绍。
 ```
   mounted() {
-    window.addEventListener("scroll", this.debounce(this.handleScroll,300), true)
+    window.addEventListener("scroll", this.throttle(this.handleScroll,300), true)
   },
-  //debounce的返回值是一个函数
+  //throttle的返回值是一个函数
 ```
-3. 实现handleScroll方法，保存滚动值，判断图标是否出现<br>
+1. 实现handleScroll方法，保存滚动值，判断图标是否出现<br>
 ```
 handleScroll() {
       this.scrollTop = document.documentElement.scrollTop
@@ -98,3 +99,15 @@ backClick() {
 ##### 节流与防抖的区别
    防抖：只执行最后一次<br>
    节流：控制执行次数<br>
+
+##### debounce 应用场景
+1. 搜索框：用户不断输入时，用防抖来节约资源
+2. window触发resize的时候，不断的调整浏览器窗口大小会不断的触发这个事件，用防抖来让其只触发一次
+3. 登录、发短信等按钮避免用户操作过快，以至于发送请求次数频繁，可以使用防抖
+##### throttle 应用场景
+1. 监听滚动事件时
+2. 鼠标不断点击触发，mousemove、mousedown、keyup等事件
+
+
+
+#### 最终效果
