--- a/Promise/02基本使用.md
+++ b/Promise/02基本使用.md
@@ -3,8 +3,10 @@
 2. 执行异步操作
 3. 成功, 调用 resolve(value)    
   失败, 调用 reject(reason)   
+![H40OXIX_MS9N{0YVD ~2 6X](https://user-images.githubusercontent.com/71962217/132632834-38f7aecc-74f0-43e6-9275-0394a8155891.png)
 
-根据输出结果，可以看出：   
+
+根据[基本使用]()输出结果，可以看出：   
 (resolve, reject)=>{}为执行器函数，是同步回调
 
 #### 为什么使用promise
@@ -29,4 +31,4 @@
     缺点：不便于阅读 / 不便于异常处理   
     **解决方案---->promise链式调用    
     终极解决方案-----> async/await**   
-    [查看案例]()
+    [查看案例](https://github.com/zyy782/yuanyuan.github.io/blob/main/Promise/02%2B.js)
