--- a/Promise/02基本使用.md
+++ b/Promise/02基本使用.md
@@ -1,4 +1,4 @@
-#### [基本使用]()    
+#### [基本使用](https://github.com/zyy782/yuanyuan.github.io/blob/main/Promise/02.js)    
 1. 创建Promise对象
 2. 执行异步操作
 3. 成功, 调用 resolve(value)    
@@ -6,14 +6,14 @@
 ![H40OXIX_MS9N{0YVD ~2 6X](https://user-images.githubusercontent.com/71962217/132632834-38f7aecc-74f0-43e6-9275-0394a8155891.png)
 
 
-根据[基本使用]()输出结果，可以看出：   
+根据[基本使用](https://github.com/zyy782/yuanyuan.github.io/blob/main/Promise/02.js)输出结果，可以看出：   
 (resolve, reject)=>{}为执行器函数，是同步回调
 
 #### 为什么使用promise
 1. <span style="color:red">**指定回调函数的方式更加灵活**</span>:    
    旧的: 必须在启动异步任务前指定   
    promise: 启动异步任务 => 返回promie对象 => 给promise对象绑定回调函数(甚至可以在异步任务结束后指定)    
-   比如说，我可以在拿到promise结果之后的时间再去回调 ,以 [基本使用]() 中的代码为例，改为下面的形式依旧可以取得结果   
+   比如说，我可以在拿到promise结果之后的时间再去回调 ,以 [基本使用](https://github.com/zyy782/yuanyuan.github.io/blob/main/Promise/02.js) 中的代码为例，改为下面的形式依旧可以取得结果   
    ```
    setTimeout(() => {
     p.then(value => { //onResolved
