--- a/Promise/02基本使用.md
+++ b/Promise/02基本使用.md
@@ -1,14 +1,14 @@
 #### [基本使用]()    
-1. 创建Promise对象
+1. 创建Promise对象new Promise(executor)
 2. 执行异步操作
 3. 成功, 调用 resolve(value)    
   失败, 调用 reject(reason)   
 
 根据输出结果，可以看出：   
-(resolve, reject)=>{}为执行器函数，是同步回调
+(resolve, reject)=>{}为执行器函数，是同步回调  ,异步操作在执行器中执行
 
 #### 为什么使用promise
-1. <span style="color:red">**指定回调函数的方式更加灵活**</span>:    
+1. <span style="color:red"> **指定回调函数的方式更加灵活** </span>:    
    旧的: 必须在启动异步任务前指定   
    promise: 启动异步任务 => 返回promie对象 => 给promise对象绑定回调函数(甚至可以在异步任务结束后指定)    
    比如说，我可以在拿到promise结果之后的时间再去回调 ,以 [基本使用]() 中的代码为例，改为下面的形式依旧可以取得结果   
