--- a/Promise/04几个关键问题.md
+++ b/Promise/04几个关键问题.md
@@ -119,7 +119,7 @@
             }
         )
       ```  
-5.  <B>[链式调用](03.js)    </B>   
+5.  <B>[链式调用](https://github.com/zyy782/yuanyuan.github.io/blob/main/Promise/03.js)    </B>   
    需要注意的是，执行失败的回调只能表明上一步的结果是错误的，不代表下一步也会执行失败的回调 
 6. <b>promise异常传透</b>   
   (1)当使用promise的then链式调用时, 可以在最后指定失败的回调  
@@ -150,7 +150,7 @@
             console.log('onReejected1()', reason)   //onReejected1() 1
         })
   ```
-7. 中断promise链  
+7. <b>中断promise链<  
   (1)当使用promise的then链式调用时, 在中间中断, 不再调用后面的回调函数     
   (2)办法: 在回调函数中返回一个pending状态的promise对象  
    return new Promise(() => {}) 
