--- a/Promise/04几个关键问题.md
+++ b/Promise/04几个关键问题.md
@@ -150,7 +150,7 @@
             console.log('onReejected1()', reason)   //onReejected1() 1
         })
   ```
-7. <b>中断promise链<  
+7. <b>中断promise链</b>  
   (1)当使用promise的then链式调用时, 在中间中断, 不再调用后面的回调函数     
   (2)办法: 在回调函数中返回一个pending状态的promise对象  
    return new Promise(() => {}) 
