--- a/Promise/08js宏队列与微队列.md
+++ b/Promise/08js宏队列与微队列.md
@@ -1,8 +1,78 @@
 ##### JS中用来存储待执行回调函数的队列包含2个不同特定的列队
-#### 宏队列
-#### 微队列
-1. 宏列队: 用来保存待执行的**宏任务(回调)**, 比如: 定时器回调/DOM事件回调/ajax回调
-2. 微列队: 用来保存待执行的**微任务(回调)**, 比如: promise的回调/MutationObserver的回调
-3. JS执行时会区别这2个队列
-		JS引擎首先必须先执行所有的初始化同步任务代码
-		每次准备取出第一个宏任务执行前, 都要将所有的微任务一个一个取出来执行
+#### [宏队列](08.js)  
+用来保存待执行的**宏任务(回调)**, 比如: 定时器回调/DOM事件回调/ajax回调
+#### [微队列](08.js)
+用来保存待执行的**微任务(回调)**, 比如: promise的回调/MutationObserver的回调    
+
+
+##### JS执行时会区别这2个队列
+1. JS引擎首先必须先执行所有的初始化同步任务代码
+2. 每次准备取出第一个宏任务执行前, 都要将所有的微任务一个一个取出来执行
+
+【案例1】  
+输出顺序为：4 2 3 1
+```
+setTimeout(() => {
+    console.log(1)
+}, 0)
+Promise.resolve().then(() => {
+    console.log(2)
+})
+Promise.resolve().then(() => {
+    console.log(3)
+})
+console.log(4)
+
+```
+【案例2】   
+输出顺序为 2 5 3 4 1
+```
+setTimeout(() => {
+    console.log(1)
+}, 0)
+new Promise((resolve) => {
+    console.log(2)
+    resolve()
+}).then(() => {
+    console.log(3)
+}).then(() => {
+    console.log(4)
+})
+
+console.log(5)
+```  
+步骤解析：   
+1. 初始状态：   
+   初始代码： console.log(2)、console.log(5)     
+   宏队列：console.log(1)   
+   微队列：console.log(3)
+2. 输出2 5 3 之后  
+   宏队列：console.log(1)   
+   微队列：console.log(4)
+3. 输出 2 5 3 4 1
+
+【案例3】    
+输出顺序为 3 7 4 1 2 5
+```
+const first = () => (new Promise((resolve, reject) => {
+    console.log(3);
+    let p = new Promise((resolve, reject) => {
+        console.log(7);
+        setTimeout(() => {
+            console.log(5);
+            resolve(6);
+        }, 0)
+        resolve(1);
+    });
+    resolve(2);
+    p.then((arg) => {
+        console.log(arg);
+    });
+
+}));
+
+first().then((arg) => {
+    console.log(arg);
+});
+console.log(4);
+```
