--- a/JS/08事件循环机制.md
+++ b/JS/08事件循环机制.md
@@ -1,5 +1,5 @@
 我们都知道，JS是单线程的，而浏览器内核是多线程的，为了使我们的异步代码在浏览器可以很好地运行，js有一套机制———“事件循环机制”。    
-总体来说，就是“先同步再异步，异步中[先微任务再宏任务]()”     
+总体来说，就是“先同步再异步，异步中[先微任务再宏任务](https://github.com/zyy782/yuanyuan.github.io/blob/main/Promise/08js%E5%AE%8F%E9%98%9F%E5%88%97%E4%B8%8E%E5%BE%AE%E9%98%9F%E5%88%97.md)”     
 简单理解：   
 1. js执行任务时会首先区分是同步任务还是异步任务   
    如果是同步任务，则进入主线程，异步任务则进入时间表并注册回调函数，注册的回调函数在任务队列中等待。
