--- a/Navigation project/实现一键回到顶部（节流防抖）.md
+++ b/Navigation project/实现一键回到顶部（节流防抖）.md
@@ -56,6 +56,7 @@ backClick() {
         <!-- timer = setTimeout(fn,delay);  //简约写法：直接传入函数名，this指向的 就是fn的地址  -->
         timer = setTimeout(()=>{
             fn.call(this);
+            //fn.apply(this, args); // 改变this指向为调用debounce所指的对象
         },delay)
       }
     }
