--- a/Navigation project/实现一键回到顶部（节流防抖）.md
+++ b/Navigation project/实现一键回到顶部（节流防抖）.md
@@ -99,7 +99,7 @@ backClick() {
 ##### 节流与防抖的区别
    防抖：只执行最后一次<br>
    节流：控制执行次数<br>
-
+搬运一个博主的解释 https://www.cnblogs.com/aurora-ql/p/13757733.html
 ##### debounce 应用场景
 1. 搜索框：用户不断输入时，用防抖来节约资源
 2. window触发resize的时候，不断的调整浏览器窗口大小会不断的触发这个事件，用防抖来让其只触发一次
