--- a/Navigation project/实现一键回到顶部（节流防抖）.md
+++ b/Navigation project/实现一键回到顶部（节流防抖）.md
@@ -64,19 +64,19 @@ backClick() {
    规定一个单位时间，在这个单位时间内，只能有一次触发事件的回调函数执行，如果在同一个单位时间内某事件被触发多次，只有一次能生效。<br>
    1. 定时器方式
    ```
-   function throttle(fn,delay){
-       let flag = true;
-       return function(){
-           if(flag){
-               setTimeout(() =>{
-                   fn.call(this);
-                   <!-- 每执行一次，设为true 将执行频率控制在每delay毫秒执行一次 -->
-                   flag = true;
-               },delay)
-           }
-           flag = false;
-     }
-   }
+        function throttle(fn, delay) {
+            let flag = true;
+            return function() {
+                if (!flag) return;
+                flag = false;
+                setTimeout(() => {
+                    fn.call(this);
+                    // 最后在setTimeout执行完毕后再把标记设置为true(关键)表示可以执行下一次循环了。
+                    // 当定时器没有执行的时候标记永远是false，在开头被return掉
+                    flag = true;
+                }, delay)
+            }
+        }
    ```
     2. 时间戳方式
     ```
