--- a/JS/10内存泄漏.md
+++ b/JS/10内存泄漏.md
@@ -81,8 +81,11 @@ ES6 把引用有区分为强引用和弱引用，这个目前只有再 Set 和 M
  核心：**可达内存被标记，其余的被当作垃圾回收**     
  标记清除算法：    
  假定设置一个叫做根（root）的对象（在Javascript里，根是全局对象）。垃圾回收器将定期从根开始，查找所有从根开始引用的对象，然后找这些对象引用的对象找到的会给它一个标记。最后没有标记的就会被当做垃圾释放。     
-  
-看到一个这样的解释，也很好理解：   
+  ![%U@XRMN83})L{4%EYLIV6HA](https://user-images.githubusercontent.com/71962217/134473388-71dc2532-96a6-41fa-8fd0-b3d850f8f88c.png)
+
+看到一个这样的解释，也很好理解：
+![Y)G3@R(`VE_}FAQ68R1 MWR](https://user-images.githubusercontent.com/71962217/134473410-dee29a70-5feb-4b4b-917f-4ddc073afa6b.png)
+
 
 ### 内存泄漏的一些场景   
 1. 全局变量   
