--- a/axios/01.md
+++ b/axios/01.md
@@ -1,3 +1,7 @@
+### 什么是axios
+1. Axios 是一个基于 promise 的 HTTP 库，可以用在浏览器和 node.js 中。是前端最流行的 ajax 请求库。
+2. react/vue 官方都推荐使用 axios 发 ajax 请求
+
 #### 使用
 ```
 npm install axios
@@ -18,7 +22,7 @@ import VueAxios from 'vue-axios'
 Vue.use(VueAxios, axios)
 ```
 
-#### 区别一般的http请求与ajax请求
+### 区别一般的http请求与ajax请求
 1. ajax请求是一种特别的http 请求
 2. 对服务器端来说，没有任何区别，**区别在浏览器端**
 3. 浏览器端发请求:**只有XHR或fetch 发出的才是ajax请求**，其它所有的都是
@@ -45,12 +49,19 @@ ajax的几个步骤：
 
 
 ### axios特点
-1. 基于promise的异步ajax请求库
+1. 基于promise的异步ajax请求库，支持promise的所有Api
 2. 浏览器端/node端都可以使用
 3. 支持请求/响应拦截器
 4. 支持请求取消
-5. 请求/响应数据转换
+5. 可以转换请求数据和响应数据，并对响应回来的内容自动转换成 JSON类型的数据
 6. 批量发送多个请求
+#### ajax的缺点
+1. 本身是针对MVC的编程,不符合现在前端MVVM的浪潮
+2. 基于原生的XHR开发，XHR本身的架构不清晰。
+3. JQuery整个项目太大，单纯使用ajax却要引入整个JQuery非常的不合理（采取个性化打包的方案又不能享受CDN服务）
+4. 不符合关注分离（Separation of Concerns）的原则配置和调用方式非常混乱，而且基于事件的异步模型不友好。   
+####  [Ajax工作原理及缺点](https://www.cnblogs.com/sanmaospace/archive/2013/06/15/3137180.html)
+
 
 ### axiox常用语法
 [api](http://www.axios-js.com/docs/)
