--- a/axios/01.md
+++ b/axios/01.md
@@ -105,3 +105,4 @@ axios.default.xxxx 请求的默认全局配置
 
 ##### 
 [axios使用](https://github.com/zyy782/yuanyuan.github.io/blob/main/axios/01.html)
+##### [axios的封装](https://github.com/febobo/web-interview/issues/25)
