--- a/JS/08事件循环机制.md
+++ b/JS/08事件循环机制.md
@@ -1,3 +1,55 @@
+## JS事件机制    
+js事件机制描述的是事件在DOM里面的传递顺序  
+#### 事件触发的三个阶段
+1. 事件捕获阶段    
+   当事件触发时，先从DOM树顶层开始进行事件捕获，直到事件触发到达了事件源元素
+2. 目标阶段
+3. 事件冒泡阶段    
+   事件会随着DOM树的层级路径，由子节点向父节点进行层层传递，直至到达document
+
+#### 事件绑定类型
+1. 按类型划分
+   + DOM0 级
+     >document.onclick=function(){} //绑定   
+      document.onlick = null; //移除    
+      注意：内部的this对象总是指向触发事件的那个节点。
+
+   + DOM2 级
+     >document.addEventListener(function(){},false) ;//绑定      
+      document.removeEventListner(function(){},false);//移除   
+      注意：内部的this对象总是指向触发事件的那个节点
+   + 特殊的IE事件处理
+     >dom.attachEvent('onclick',function(){ });//绑定    
+      detachEvent('onclick',function(){});//移除        
+     注意：IE在使用attachEvent方法的情况下，事件处理程序的作用域为全局作用域，因此**this等于window**。
+2. 按方式划分   
+   + 作为属性，写在html元素上 ------>**冒泡阶段**
+   + document.onclick=function(){} ------>**冒泡阶段**
+   + document.addEventListener(function(){},**false**)    //推荐的标准事件模式   
+     >当它为 **false** (默认)时，绑定在事件**冒泡阶段**。当它为**true**时，绑定在**捕获阶段**
+#### 绑定元素和目标元素
+>绑定元素：绑定事件处理函数的元素    
+ 目标元素：用户操作触发的元素
+#### 绑定事件执行顺序
+1. 对于同一个元素：先绑定先执行
+2. onclick绑定：重复绑定，后面的会覆盖前面的
+3. addEventLisener绑定：重复绑定几次执行几次
+4. 如果在DOM中直接使用onclick ，则onclick的绑定是早于 addEventListener 的。
+#### [事件委托](08事件委托.md)
+#### 事件对象event
+触发DOM上的某个事件时，会产生一个事件对象event。这个对象中包含着所有与事件有关的信息。   
+>**event.target**：指的是触发事件的那个节点，即事件最初发生的节点。     
+>**event.currentTarget**：指的是正在执行的监听函数所绑定的那个节点。
+>**event.path**：指的是事件冒泡的顺序。
+>**event.timeStamp**：指的是从事件绑定完成到此次事件触发的时间，单位是毫秒。    
+>**event.type**：事件的类型，比如click，input     
+>**event.isTrusted**：表示事件是否是真实用户触发。    
+**event.preventDefault()**：取消事件的默认行为，比如 a标签 默认跳转到一个新网址，如果阻止默认行为，就不会跳转。     
+**event.stopPropagation()**：当有event对象时，阻止事件冒泡。    
+**window.event.cancelBubble = true**：当没有event对象时，阻止事件冒泡（一般用在IE浏览器）。    
+**event.stopImmediatePropagation()**：阻止同一个事件的其他监听函数被调用。比如对同一个元素绑定了两个click事件，如果在第一个click事件写了event.stopImmediatePropagation()，那么它的其他点击事件就都不会被触发。
+
+## JS事件循环机制
 我们都知道，JS是单线程的，而浏览器内核是多线程的，为了使我们的异步代码在浏览器可以很好地运行，js有一套机制———“事件循环机制”。    
 总体来说，就是“先同步再异步，异步中[先微任务再宏任务](https://github.com/zyy782/yuanyuan.github.io/blob/main/Promise/08js%E5%AE%8F%E9%98%9F%E5%88%97%E4%B8%8E%E5%BE%AE%E9%98%9F%E5%88%97.md)”     
 简单理解：   
@@ -153,6 +205,7 @@ new Promise(function(resolve) {
 
 
 
-
+参考：   
+https://zhuanlan.zhihu.com/p/30988982
 
  
