--- a/JS/09事件委托.md
+++ b/JS/09事件委托.md
@@ -1,4 +1,85 @@
-### DOM事件流
-即从页面中接收事件的顺序
-1. 事件捕获阶段
-2. 
+### [DOM事件流](https://segmentfault.com/a/1190000013265547)
+即从页面中接收事件的顺序(三个阶段)
+
+### 什么是事件委托
+>**将事件统一绑定给元素的共同的祖先元素，这样当后代元素上的事件被触发时，会一直冒泡到祖先元素 而通过祖先元素的响应函数来处理事件，这就是事件委托（事件代理）**    
+比如：页面上有这么一个节点树，div>ul>li>a;比如给最里面的a加一个click点击事件，那么这个事件就会一层一层的往外执行，执行顺序a>li>ul>div，有这样一个机制，那么我们给最外面的div加点击事件，那么里面的ul，li，a做点击事件的时候，都会冒泡到最外层的div上，所以都会触发，这就是事件委托，委托它们父级代为执行事件。
+
+### 为什么要用事件委托
+当我们有很多dom需要添加事件时，比如我们需要给50个li标签都绑定点击事件，如果我们用for循环遍历绑定，就需要与dom交互50次。我们知道过多的操作dom非常的影响性能。但如果我们使用事件委托，就可以把所有的操作放到js中，将与dom的操作减少到1次，从而提高性能。
+
+### 使用
+我们想为每一个超链接都绑定一个单击响应函数
+```
+<body>
+    <button id="btn01">添加超链接</button>
+    <ul id="ul">
+        <li><a href="javascript:;" class="link">超链接一</a></li>
+        <li><a href="javascript:;" class="link">超链接二</a></li>
+        <li><a href="javascript:;" class="link">超链接三</a></li>
+    </ul>
+</body>
+```
+如果不使用事件委托：  
+这样通过遍历为每一个 a 绑定点击事件，只能为已存在超连接添加事件，而新添加的 a 必须重新绑定。   
+绑定次数为已存在a标签的个数，频繁操作dom，性能差。
+```
+<script>
+    window.onload = function() {
+        //点击按钮添加a连接
+        var ul = document.getElementById("ul");
+        var btn01 = document.getElementById("btn01");
+        btn01.onclick = function() {
+            var li = document.createElement("li");
+            li.innerHTML = "<a href='javascript:;' class='link'>新建的超链接<a>";
+            ul.appendChild(li);
+        }
+        //为每一个a链接添加点击事件(无法为通过button添加的a绑定)
+        var allA = document.getElementsByTagName("a");
+        for (var i = 0; i < allA.length; i++) {
+            allA[i].onclick = function() {
+                 alert("!!!!!");
+            }
+        };
+    };
+</script>
+```
+使用事件委托时：  
+
+```
+<script>
+    window.onload = function() {
+        var ul = document.getElementById("ul");
+        var btn01 = document.getElementById("btn01");
+        btn01.onclick = function() {
+            var li = document.createElement("li");
+            li.innerHTML = "<a href='javascript:;' class='link'>新建的超链接<a>";
+            ul.appendChild(li);
+        }
+        var allA = document.getElementsByTagName("a");
+        ul.onclick = function(event) {
+            event = event || window.event;
+            //如果触发事件的对象是我们期待的元素，则执行，否则，不执行
+            if (event.target.className == "link") {
+                alert("我是ul的单击响应函数");
+            }
+        }
+
+   };    
+</script>
+```
+这样只操作一次DOM，并且新添加的 a 也能够绑定点击事件  
+#### 优点：  
+1. 减少事件注册，节省内存，提高性能
+2. 简化了dom节点更新时，相应事件的更新。比如    
+   不用在新添加的li上绑定click事件   
+   当删除某个li时，不用移解绑上面的click事件    
+#### 缺点：
+1. 基于冒泡，不支持冒泡的事件无法事件委托（比如：resize、blur、mouseleave）
+2. 层级过多，冒泡过程中，可能会被某层阻止掉。
+
+适合用事件委托的事件：click，mousedown，mouseup，keydown，keyup，keypress。  
+
+
+
+[一个例子](09.html)
