feat:添加闭包相关

--- a/JS/02闭包.md
+++ b/JS/02闭包.md
@@ -51,3 +51,31 @@ data[0]();//0
 data[1]();//1
 data[2]();//2
 ```
+
+#### 闭包使用经典场景
+1. return 回一个函数
+2. 函数作为参数
+3. IIFE（自执行函数）
+4. 使用回调函数就是在使用闭包
+5. 节流防抖
+6. 柯里化实现  （ 是把接受多个参数的函数变换成接受一个单一参数（最初函数的第一个参数）的函数，并且返回接受余下的参数而且返回结果的新函数的技术。）
+   
+
+#### 使用闭包需要注意什么  
+>容易导致内存泄漏。闭包会携带包含其它的函数作用域，因此会比其他函数占用更多的内存。过度使用闭包会导致内存占用过多，所以要谨慎使用闭包。
+
+
+#### 一个题目
+```
+function a() {
+    var a = 2;
+
+    function b() {
+        console.log(a);//10
+    }
+    a = 10;
+    return b();
+    a = 20;
+}
+a()
+```
