--- a/JS/02闭包.md
+++ b/JS/02闭包.md
@@ -59,7 +59,8 @@ data[2]();//2
 4. 使用回调函数就是在使用闭包
 5. 节流防抖
 6. 柯里化实现  （ 是把接受多个参数的函数变换成接受一个单一参数（最初函数的第一个参数）的函数，并且返回接受余下的参数而且返回结果的新函数的技术。）
-   
+![Image](https://user-images.githubusercontent.com/71962217/135369939-7cab32ee-e2cf-479c-82c1-49b47d97e2c1.png)
+
 
 #### 使用闭包需要注意什么  
 >容易导致内存泄漏。闭包会携带包含其它的函数作用域，因此会比其他函数占用更多的内存。过度使用闭包会导致内存占用过多，所以要谨慎使用闭包。
