--- a/JS/08事件循环机制.md
+++ b/JS/08事件循环机制.md
@@ -5,7 +5,10 @@ js事件机制描述的是事件在DOM里面的传递顺序
    当事件触发时，先从DOM树顶层开始进行事件捕获，直到事件触发到达了事件源元素
 2. 目标阶段
 3. 事件冒泡阶段    
-   事件会随着DOM树的层级路径，由子节点向父节点进行层层传递，直至到达document
+   事件会随着DOM树的层级路径，由子节点向父节点进行层层传递，直至到达document                 
+
+![IMG_8021](https://user-images.githubusercontent.com/71962217/135370128-f274e123-6e08-4961-8689-acdf04a2ae18.PNG)
+
 
 #### 事件绑定类型
 1. 按类型划分
