--- a/JS/08事件循环机制.md
+++ b/JS/08事件循环机制.md
@@ -7,7 +7,8 @@ js事件机制描述的是事件在DOM里面的传递顺序
 3. 事件冒泡阶段    
    事件会随着DOM树的层级路径，由子节点向父节点进行层层传递，直至到达document                 
 
-![IMG_8021](https://user-images.githubusercontent.com/71962217/135370128-f274e123-6e08-4961-8689-acdf04a2ae18.PNG)
+<img src="https://user-images.githubusercontent.com/71962217/135370128-f274e123-6e08-4961-8689-acdf04a2ae18.PNG" width = "600" height = "400"/>
+
 
 
 #### 事件绑定类型
@@ -60,7 +61,10 @@ js事件机制描述的是事件在DOM里面的传递顺序
    如果是同步任务，则进入主线程，异步任务则进入时间表并注册回调函数，注册的回调函数在任务队列中等待。
 2. 主线程中的同步任务执行完毕时，就会去任务队列中读取对应的函数，把它推入主线程执行栈进行调用。
 3. 在任务队列中读取对应函数时，js会先读取微任务，再读取宏任务。
-4. 该过程会不断循环重复，也就是所说的“事件循环（Event Loop）”
+4. 该过程会不断循环重复，也就是所说的“事件循环（Event Loop）”            
+
+<img src="https://user-images.githubusercontent.com/71962217/135372313-d2801504-f765-4857-82aa-dc3676ae5e5e.png" width = "300" height = "400"/>
+
 
 
 搬运一个博主的整理，觉得写得很详细了    
