--- a/firstIntership/01.md
+++ b/firstIntership/01.md
@@ -1,4 +1,24 @@
 ### 问题描述
 给循环列表绑定添加子项。列表结构如下：
+![image](https://user-images.githubusercontent.com/71962217/162401502-9b80e31d-433d-449e-a27e-3e02c2f00ce0.png)
 
-点击“+”按钮时，出现input标签实现添加tag
+点击“+”按钮时，出现input标签实现添加tag       
+![image](https://user-images.githubusercontent.com/71962217/162401621-b377ba99-bb6e-4bc7-a4a3-687b53644ede.png)
+数据结构如下：       
+![image](https://user-images.githubusercontent.com/71962217/162401778-5cbc9a15-429d-4f72-a0e7-81e5e0485e6c.png)
+#### 问题：如何控制点击按钮时，在**该列表数据**中显示input标签
+这里我在input外面的div（在input上也可以）使用v-if控制，由于这里后端传的字段中没有用于控制input是否显示的，这里选择动态添加一个index属性 `v-if="item.index == '-1' ? true : false"`。给按钮绑定一个点击事件`@on-click="addItem(item)"`，具体如下   
+```
+addItem(item) {
+        if (item.index == undefined) {
+          // 动态的将当前数据添加一条数据以便控制input标签的显示和隐藏
+          this.$set(item, 'index', '-1')
+        } else {
+          this.$delete(item, 'index', '-1')
+        }
+      },
+```
+代码如下：   
+![image](https://user-images.githubusercontent.com/71962217/162404287-ba259058-137c-4037-ac9b-0524f93f1862.png)     
+![image](https://user-images.githubusercontent.com/71962217/162404456-6c4b87fc-f822-4166-8cc8-dfc5bab53337.png)
+
