--- a/firstIntership/01.md
+++ b/firstIntership/01.md
@@ -22,3 +22,54 @@ addItem(item) {
 ![image](https://user-images.githubusercontent.com/71962217/162404287-ba259058-137c-4037-ac9b-0524f93f1862.png)     
 ![image](https://user-images.githubusercontent.com/71962217/162404456-6c4b87fc-f822-4166-8cc8-dfc5bab53337.png)
 
+### 需求更改
+#### 现要求 1.出现input框的同时，隐藏“+”按钮，同时出现取消按钮；2.若input框输入内容后，未回车保存，且未点击取消按钮，就去做其他的操作，则弹出警告
+#### 最终效果
+![1651051640737_160F6149-4049-4620-A583-29C4F9E8CB31](https://user-images.githubusercontent.com/71962217/165487772-f362478c-ffae-42ac-8988-453df27b080a.png)
+![1651051661622_0D3AAF51-C6C2-478a-A061-E2CCD8930456](https://user-images.githubusercontent.com/71962217/165487827-613f35f6-5d09-4757-bbd5-e7ffbf32e978.png)
+![1651051636949_BCC82A6C-1B51-4e18-A34D-D1BC0351FA4C](https://user-images.githubusercontent.com/71962217/165487847-d4251104-8e23-4fb1-8b89-ef504d9c364a.png)
+#### 具体实现
+![RXUS_Y8P E5S}M7V6%9T%G6](https://user-images.githubusercontent.com/71962217/165488921-83a94992-23e4-4420-af05-07238e766dbd.png)
+```
+    // 新增关键词按钮
+    addItem (item) {
+      if (item.index == undefined) {
+        // 动态的将当前数据添加一条数据以便控制input标签的显示和隐藏
+        this.$set(item, 'index', '-1')
+      } else {
+        this.$delete(item, 'index', '-1')
+        this.words.key_word = ''
+      }
+    },
+    // 回车新增关键词
+    handleEnter (item, index) {
+      this.$delete(item, 'index', '-1')
+      postAuditRuleWord({
+        rule_id: item.rule_id,
+        key_word: this.words.key_word,
+        unique_id: generateUID()
+      }).then((res) => {
+        if (res) {
+          getAuditRuleDetailList().then(res => {
+            const resData = res.data.rules
+            let ruleObj = {}
+            resData.map(ruleItem => {
+              if (ruleItem.rule_id === item.rule_id) {
+                ruleObj = { ...ruleItem }
+              }
+            })
+            this.$set(this.rulesList, index, ruleObj)
+          })
+        }
+      })
+      this.words.key_word = ''
+    },
+    remind (p) {
+      if (p) {
+        this.$hMessage.warning('有未保存的内容，请先进行保存')
+      }
+    },
+    kill ($event) {
+      $event.preventDefault()
+    },
+```
