--- a/firstIntership/01.md
+++ b/firstIntership/01.md
@@ -30,6 +30,11 @@ addItem(item) {
 ![1651051636949_BCC82A6C-1B51-4e18-A34D-D1BC0351FA4C](https://user-images.githubusercontent.com/71962217/165487847-d4251104-8e23-4fb1-8b89-ef504d9c364a.png)
 #### 具体实现
 ![RXUS_Y8P E5S}M7V6%9T%G6](https://user-images.githubusercontent.com/71962217/165488921-83a94992-23e4-4420-af05-07238e766dbd.png)
+>由于弹警告框是给input标签绑定了失去焦点事件，所以用户在点击“取消”时，也会弹出警告，为解决这一问题，在“取消”按钮上绑定一个mousedowm方法，通过$event.preventDefault()阻断input失去焦点事件的发生。
+
+>给“+”按钮与“取消”按钮的v-if绑定相反的值，控制两者的显示与隐藏
+
+具体代码如下：
 ```
     // 新增关键词按钮
     addItem (item) {
