--- a/firstIntership/02.md
+++ b/firstIntership/02.md
@@ -1,5 +1,7 @@
 ### 刷新问题
 >描述：最初我将智能审核规则库页面的数据刷新放到了created中，但这会存在这样的一个问题：用户在浏览第一个页面时，如果后端维护的智能审核规则库有数据的更新，那么用户在点击按钮进入智能审核规则库后看到的则不是最新的数据。因此，这里的数据刷新我改到了点击智能审核规则库上面。
+![image](https://user-images.githubusercontent.com/71962217/165879503-85a0e4c6-a63d-4ced-a6d5-f7fe015a7ec2.png)
+
 ##### 智能审核规则库按钮
 ```
 <h-button type="border" style="float:right;" @click.native="store()">
@@ -31,3 +33,5 @@ transferId (rule_id) {
 },
 ```
 >如下图，规则的获取逻辑是 点击左侧名称，根据id获取右侧的具体信息。最初我的想法是，每次点击按钮，都获取到左侧第一个名称的id，进行右侧信息的获取`this.transferId(this.titles[0].rule_id)`。但这样存在一个问题，当我们停留在<b>非第一个名称</b>关闭智能审核规则库时，在进入依旧时先获取第一条数据，导致左右两侧数据不对应。因此，需要在data()里定义一个变量selectId: '10001',来记住选中的左侧名字。
+![image](https://user-images.githubusercontent.com/71962217/165879354-d47ecb72-8659-41e7-a1b8-10f5e2de9da1.png)
+
