添加局部更新

--- a/firstIntership/02.md
+++ b/firstIntership/02.md
@@ -1,4 +1,4 @@
-### 刷新问题
+## 刷新问题 ——刷新位置
 >描述：最初我将智能审核规则库页面的数据刷新放到了created中，但这会存在这样的一个问题：用户在浏览第一个页面时，如果后端维护的智能审核规则库有数据的更新，那么用户在点击按钮进入智能审核规则库后看到的则不是最新的数据。因此，这里的数据刷新我改到了点击智能审核规则库上面。
 ![image](https://user-images.githubusercontent.com/71962217/165879503-85a0e4c6-a63d-4ced-a6d5-f7fe015a7ec2.png)
 
@@ -34,4 +34,36 @@ transferId (rule_id) {
 ```
 >如下图，规则的获取逻辑是 点击左侧名称，根据id获取右侧的具体信息。最初我的想法是，每次点击按钮，都获取到左侧第一个名称的id，进行右侧信息的获取`this.transferId(this.titles[0].rule_id)`。但这样存在一个问题，当我们停留在<b>非第一个名称</b>关闭智能审核规则库时，在进入依旧时先获取第一条数据，导致左右两侧数据不对应。因此，需要在data()里定义一个变量selectId: '10001',来记住选中的左侧名字。
 ![image](https://user-images.githubusercontent.com/71962217/165879354-d47ecb72-8659-41e7-a1b8-10f5e2de9da1.png)
+
+## 刷新问题 ——局部刷新
+>问题描述：页面的规则列表展示为一个接口，每个规则上的增加、编辑、新建各有一个接口。我在添加关键词之后，进行了整个页面的刷新，这就导致客户未操作的规则也会跟着刷新，导致里面的关键词重新排序，视觉上感觉别的规则也受到影响。由于整个页面的规则列表展示都是一个接口。所以这里前端需要做局部刷新：页面每一个规则遍历```v-for="(item, index) in rulesList"```, 方法传入item，拿到后端返回的数据后，只针对当前操作的item进行赋值刷新 ```@on-enter="handleEnter(item, index)"```
+
+
+```
+    // 回车新增关键词
+    handleEnter (item, index) {
+      this.$delete(item, 'index', '-1')
+      postAuditRuleWord({
+        rule_id: item.rule_id,
+        key_word: this.words.key_word,
+        unique_id: generateUID()
+      }).then((res) => {
+        if (res) {
+          getAuditRuleDetailList().then(res => {
+            const resData = res.data.rules
+            let ruleObj = {}
+            resData.map(ruleItem => {
+              if (ruleItem.rule_id === item.rule_id) {
+                ruleObj = { ...ruleItem }
+              }
+            })
+            this.$set(this.rulesList, index, ruleObj)
+          })
+        }
+      })
+      this.words.key_word = ''
+    },
+```
+>[Vue.$set(target, key, value)](https://cn.vuejs.org/v2/guide/reactivity.html)   
+this.$set(this.rulesList, index, ruleObj)  更新this.rulesList中当前index位置，更新的数据为ruleObj
 
