--- a/firstIntership/02.md
+++ b/firstIntership/02.md
@@ -37,6 +37,7 @@ transferId (rule_id) {
 
 ## 刷新问题 ——局部刷新
 >问题描述：页面的规则列表展示为一个接口，每个规则上的增加、编辑、新建各有一个接口。我在添加关键词之后，进行了整个页面的刷新，这就导致客户未操作的规则也会跟着刷新，导致里面的关键词重新排序，视觉上感觉别的规则也受到影响。由于整个页面的规则列表展示都是一个接口。所以这里前端需要做局部刷新：页面每一个规则遍历```v-for="(item, index) in rulesList"```, 方法传入item，拿到后端返回的数据后，只针对当前操作的item进行赋值刷新 ```@on-enter="handleEnter(item, index)"```
+![ACD2B184-B043-4efe-9629-2CD95B7B79A3](https://user-images.githubusercontent.com/71962217/165889371-37db0186-1819-4e2f-b6cb-e2ff6d1fb8c1.png)
 
 
 ```
