--- a/Navigation project/实现一键回到顶部（节流防抖）.md
+++ b/Navigation project/实现一键回到顶部（节流防抖）.md
@@ -15,6 +15,8 @@ handleScroll() {
       this.scrollTop = document.documentElement.scrollTop
       if (this.scrollTop > 200) {
         this.isShowBackTop = true
+      } else {
+        this.isShowBackTop = false
       }
     },
 ```
