--- a/something/01.md
+++ b/something/01.md
@@ -4,3 +4,22 @@
   > git fetch --all  
   > git reset --hard 当前分支  
   > git pull
+- 查看提交日志
+  > git log
+  不带参数的情况下会列出所有的日志   直到按 q 退出
+- 回退历史版本
+  > git reset
+  在Git中HEAD表示当前版本，HEAD^ 表示上一个版本，HEAD^^ 表示上上版本.....HEAD~100 表示上100个版本
+  > git reset HEAD^  &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;   回退到上一版本
+- 查看历史命令
+  > git reflog
+  git reflog 用来恢复本地错误操作时起很大作用
+  例：
+   git reflog
+   6cad11c (HEAD -> main, origin/main, origin/HEAD) HEAD@{0}: clone: from https://github.com/zyy782/yuanyuan.github.io.git    
+   HEAD@{0}表示HEAD指针在0次移动之前的情况
+
+- 查看状态
+  > git status
+
+#### git 的许多命令难以记住，可以使用TortoiseGit来操作git。
