fix:修改部分内容

--- a/JS/08事件循环机制.md
+++ b/JS/08事件循环机制.md
@@ -13,13 +13,15 @@ js事件机制描述的是事件在DOM里面的传递顺序
 
 #### 事件绑定类型
 1. 按类型划分
-   + DOM0 级
-     >document.onclick=function(){} //绑定   
-      document.onlick = null; //移除    
+   + DOM0 级    
+     > **DOM0级事件就是直接通过onclick绑定到html元素的事件**
+     document.onclick=function(){} //绑定   
+      document.onclick = null; //移除    
       注意：内部的this对象总是指向触发事件的那个节点。
 
    + DOM2 级
-     >document.addEventListener(function(){},false) ;//绑定      
+     >**DOM2级事件也叫做事件监听**
+     document.addEventListener(function(){},false) ;//绑定      
       document.removeEventListner(function(){},false);//移除   
       注意：内部的this对象总是指向触发事件的那个节点
    + 特殊的IE事件处理
@@ -65,6 +67,8 @@ js事件机制描述的是事件在DOM里面的传递顺序
 
 <img src="https://user-images.githubusercontent.com/71962217/135372313-d2801504-f765-4857-82aa-dc3676ae5e5e.png" width = "300" height = "400"/>
 
+>宏任务: setTimeout, setInterval, setImmediate, I/O, UI rendering
+ 微任务: process.nextTick, Promises, Object.observe(废弃), MutationObserver
 
 
 搬运一个博主的整理，觉得写得很详细了    
