feat:添加一个例子

--- a/something/02.md
+++ b/something/02.md
@@ -39,3 +39,30 @@ define(['jquery', 'common', 'util', 'native'], function ($, common) {
   }
 })
 ```
+#### 栗子3
+```
+// menu.js文件
+define(['jquery', 'common', 'Swiper', 'sensorsdata'], function($, common, Swiper, sensors) {
+    function func11() {
+        .......
+    }
+    function func22() {
+        .......
+    }
+    function initSubMenu() {
+        func11()
+        func22()
+        .......
+    }
+    // 该模块输出的对外接口
+    return {
+        initSubMenu: initSubMenu
+    }
+})
+// index.js文件
+define(['jquery', 'common', 'menu', 'native'],function ($, common, common_lib, menu) {
+    ........
+    // 使用menu.js输出的initSubMenu接口
+    menu.initSubMenu()
+})
+```
