--- a/work/02.md
+++ b/work/02.md
@@ -11,7 +11,10 @@
 综上，这个swiper的配置项如下：
 
 ```
- swiperOption: {
+ data() {
+  return {
+    activeSwipeCard: 0, // 当前激活的swiper
+    swiperOption: {
         spaceBetween: 0,
         initialSlide: 0,
         slidesPerView: 'auto',
@@ -24,9 +27,53 @@
           },
         },
     }
+  }
+ }
 ```
 
+#### watch监听不到第一个swiper
+上述的异形swiper要求定位到当前用户的会员等级,所以对activeSwipeCard进行监听，拿到接口中的会员等级并赋值给activeSwipeCard，如下：
+```
+this.activeSwipeCard = Number(res.member_level_id) - 1;
+```
+监听如下：
+```
+ watch: {
+    activeSwipeCard: {
+      handler(val) {
+        // 卡片定位
+        this.$nextTick(() => {
+          this.$refs.mySwiper.swiper.slideTo(this.activeSwipeCard, 300, false);
+        });
+      },
+    }
+  }
+```
+测试发现，每当用户为最低等级，也就是 activeSwipeCard 为 0 的时候，监听失败。添加deep: true 和 immediate: true 也没有解决这一问题。所以想到要为该特殊情况添加一个监听。
+因此把赋值的步骤也提到watch中，当activeSwipeCard 为 0 事，手动触发定位方法，如下：
 
-
+```
+ watch: {
+    activeSwipeCard: {
+      handler(val) {
+        // 卡片定位
+        this.$nextTick(() => {
+          this.$refs.mySwiper.swiper.slideTo(this.activeSwipeCard, 300, false);
+        });
+      },
+    },
+    memberInfo: {
+      handler(val) {
+        if (val) {
+          this.activeSwipeCard = val.member_level_id - 1;
+          if (this.activeSwipeCard === 0) {
+            // 等于0时不会触发activeSwipeCard的watch，手动触发slideTo事件
+            this.$refs.mySwiper.swiper.slideTo(this.activeSwipeCard, 300, false);
+          }
+        }
+      },
+    },
+  }
+```
 
 
