--- a/work/04.md
+++ b/work/04.md
@@ -9,3 +9,5 @@
    //browse.svg
    <svg-icon name="browse"></svg-icon>
    ```
+
+   [详情参考](https://blog.csdn.net/caseywei/article/details/99744238)
