--- a/work/05.md
+++ b/work/05.md
@@ -1,1 +1,36 @@
 #### 学会使用computed
+computed是vue的计算属性，会基于其响应式依赖被缓存，只有其响应式依赖更新时才重新计算。   
+当一个数据受多个数据影响时、或者一个数据取决于接口返回时，使用computed就变得非常方便。举个栗子：  
+```
+<div>{{ currentLevel }}</div>
+<div>{{ topText }}</div>
+```
+
+```
+
+  computed: {
+    // 当前显示会员等级
+    currentLevel() {
+      if (this.currentTopLevel === '1') {
+        return '白银会员';
+      } else if (this.currentTopLevel === '2') {
+        return '黄金会员';
+      } else if (this.currentTopLevel === '3') {
+        return '铂金会员';
+      } else if (this.currentTopLevel === '4') {
+        return '黑金会员';
+      } else if (this.currentTopLevel === '5') {
+        return '钻石会员';
+      } else {
+        return '黑钻会员';
+      }
+    },
+    topText() {
+      if (this.isMobileLogin) {
+        return this.userPhone;
+      } else {
+        return '登录/注册';
+      }
+    },
+}
+```
