--- a/work/05.md
+++ b/work/05.md
@@ -34,3 +34,19 @@ computed是vue的计算属性，会基于其响应式依赖被缓存，只有其
     },
 }
 ```
+
+#### 改造
+使用策略对象，减少判断
+```
+  currentLevel(currentTopLevel) {
+    const map = {
+        '1': '白银会员',
+        '2':'黄金会员',
+        '3':'铂金会员',
+        '4':'黑金会员',
+        '5':'钻石会员',
+    }
+    return map[currentTopLevel] ?? '黑钻会员'
+  }
+```
+
