--- a/JS/14.md
+++ b/JS/14.md
@@ -84,3 +84,82 @@ foo: for (var i = 0; i < 4; i++) {
 // 1 2
 // stopping 1 3
 ```
+
+#### 3.JS的标签语运算符优先级
++ && 高于 || 高于 ?:
++ && 和 || 是左关联， ?: 是 右关联  
++ 与其它语言不同的一点是，在js中 && 和 || 并不是返回true or false：
+  **&& 左侧为true时，返回右侧的内容；  
+  || 左侧为true时，返回左侧的内容。**
+
+#### 4.switch
+##### 基础用法
+表达式 n 与 case 表达式 逐一比较，匹配就执行后面的代码，直到遇到 break 或者 switch 表达式结束。 default 后面是 所有 switch 情况外的 case。
+```
+switch(n){
+    case 1:
+        执行代码块 1
+        break;      
+    case 2:      
+        执行代码块 2      
+        break;      
+    default:
+        n 与 case 1 和 case 2 不同时执行的代码
+}
+```
+如果 default 不是 switch 代码块中最后一个 case，要记得用 break 结束默认 default。
+```
+switch(n){
+    default:
+        n 与 case 1 和 case 2 不同时执行的代码
+        break;
+    case 1:
+        执行代码块 1
+        break;      
+    case 2:      
+        执行代码块 2         
+}
+```
+一个例子： 
+```
+var text;
+switch (3) {
+  default:
+    text = "期待周末";
+    break;
+  case 6:
+    text = "今天是周六";
+    break;
+  case 0:
+    text = "今天是周日";
+}
+console.log(text) // 期待周末
+```
+
+> 需要注意的是，n 与 case 的比较 与 === 是一致的 ，所以当switch中是简单值时，没什么问题，但当switch中是各种表达式时，它会将表达式的结果与 true 进行比较。 
+```
+var x = "42"
+switch(true) {
+  case x == 10:
+    console.log('--1---');
+    break;
+  case x == 42:
+    console.log('---2--') //---2--
+    break;
+  default:
+    console.log('---3---')
+}
+```
+**当使用 || 或 && 进行判断 时，就需要注意他们返回的不是true or false ，需要用表达式强制转换为 true or false，** 如下： 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;表达式  a || b == 10  的 优先级是 ， a || (b == 10)
+```
+var a = "hello world";
+var b = 10;
+switch(true) {
+  case !!(a || b == 10):
+    console.log('1111') //1111
+    break
+  default:
+    console.log('2222')
+}
+```
