--- a/JS/14.md
+++ b/JS/14.md
@@ -1,3 +1,4 @@
+[TOC]
 ### 《你不知道的JavaScript（中）》学习草纸
 #### 1.搞懂JS的 ++a 与 a++
 ###### a++
@@ -135,7 +136,7 @@ switch (3) {
 }
 console.log(text) // 期待周末
 ```
-
+##### switch中是各种表达式时
 > 需要注意的是，n 与 case 的比较 与 === 是一致的 ，所以当switch中是简单值时，没什么问题，但当switch中是各种表达式时，它会将表达式的结果与 true 进行比较。 
 ```
 var x = "42"
@@ -150,8 +151,10 @@ switch(true) {
     console.log('---3---')
 }
 ```
-**当使用 || 或 && 进行判断 时，就需要注意他们返回的不是true or false ，需要用表达式强制转换为 true or false，** 如下： 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;表达式  a || b == 10  的 优先级是 ， a || (b == 10)
+##### switch表达式使用 || 或 && 时
+当使用 || 或 && 进行判断 时，就需要注意他们返回的不是true or false ，需要用表达式强制转换为 true or false，如下： 
+ ==*表达式  a || b == 10  的 优先级是 ， a || (b == 10)*==
+ 
 ```
 var a = "hello world";
 var b = 10;
