--- a/JS/14.md
+++ b/JS/14.md
@@ -1,5 +1,16 @@
-[TOC]  
+<!-- [TOC]   -->
 
+- [《你不知道的JavaScript（中）》学习草纸](#你不知道的javascript中学习草纸)
+  - [1.搞懂JS的 ++a 与 a++](#1搞懂js的-a-与-a)
+      - [a++](#a)
+      - [++a](#a-1)
+      - [一个例子](#一个例子)
+  - [2.JS的标签语句](#2js的标签语句)
+  - [3.JS的标签语运算符优先级](#3js的标签语运算符优先级)
+  - [4.switch](#4switch)
+    - [基础用法](#基础用法)
+    - [switch中是各种表达式时](#switch中是各种表达式时)
+    - [switch表达式使用 || 或 && 时](#switch表达式使用--或--时)
 ### 《你不知道的JavaScript（中）》学习草纸
 #### 1.搞懂JS的 ++a 与 a++
 ###### a++
