--- a/JS/14.md
+++ b/JS/14.md
@@ -11,6 +11,7 @@
     - [基础用法](#基础用法)
     - [switch中是各种表达式时](#switch中是各种表达式时)
     - [switch表达式使用 || 或 && 时](#switch表达式使用--或--时)
+    - [break](#break)
 ### 《你不知道的JavaScript（中）》学习草纸
 #### 1.搞懂JS的 ++a 与 a++
 ###### a++
@@ -179,4 +180,20 @@ switch(true) {
   default:
     console.log('2222')
 }
+```
+##### break
+只想要运行某个 case 下的语句时，一定记得在case 语句后面加 break，如果遗漏 break 且这个case匹配或者运行的话，那么会一直执行到下一个case语句，不管下一个case是否匹配。  
+```
+var x = "10"
+switch(true) {
+  case x == 10:
+    console.log('---1---')
+  case x == 42:
+    console.log('---2---')
+  default:
+    console.log('---3---')
+}
+// ---1---
+// ---2---
+// ---3---
 ```
